--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8"/>
+    <title>Hello World</title>
+</head>
 <body>
-<h1>Hello World!</h1>
+<h1>HCP List</h1>
+
+<table>
+    <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    <tr th:each="HCP : ${HCP}">
+        <td th:text="${HCP.Id}"></td>
+        <td th:text="${HCP.firstName}"></td>
+        <td th:text="${HCP.lastName}"></td>
+    </tr>
+</table>
+
 </body>
 </html>
